# CPP_Simulated_Trading_Platform

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.streamlit/: config.toml
output/: equity_curve.csv  market_data.csv  risk_report.csv  trades.csv
results/: momentum_risk_report.csv  strategy_comparison.csv
src/: MatchingEngine.cpp  OrderBook.cpp  Strategy.cpp
streamlit_app/: app.py
tests/: test_core.cpp
